<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="weblink_for_representative">weblink for representative</string>
    <string name="facebook_link_for_representative">facebook link for representative</string>
    <string name="twitter_link_for_representative">twitter link for representative</string>
    <string name="photo_of_representative">photo of representative</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="representative_search">Representative Search</string>
    <string name="find_my_representatives">Find my representatives</string>
    <string name="use_my_location">Use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="loading_spinner">loading spinner</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>

    <string name="address_fields_empty_message">Please provide a value for all address fields</string>
    <string name="http400_message">the address entered was not found</string>
    <string name="location_search_not_be_used">Location permission is needed to use current location to find representatives</string>
    <string name="grant_location_permission_for_this_functionality">Location permission is needed to use this functionality</string>

</resources>
