<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id = "@+id/motion_layout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <TextView
            android:id="@+id/search_title"
            android:text="@string/representative_search"
            style= "@style/TextStyle.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/address_line_1"
            android:text="@={viewModel.addressLineOne}"
            android:hint="@string/address_line_1"
            style= "@style/TextStyle.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_title" />

        <EditText
            android:id="@+id/address_line_2"
            style= "@style/TextStyle.Large"
            android:hint="@string/address_line_2"
            android:text="@={viewModel.addressLineTwo}"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_line_1" />

        <EditText
            android:id="@+id/city"
            android:text="@={viewModel.city}"
            style= "@style/TextStyle.Large"
            android:hint="@string/city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/state"
            app:layout_constraintTop_toBottomOf="@id/address_line_2" />

        <Spinner
            android:id="@+id/state"
            android:color="@color/colorPrimaryDark"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="textPostalAddress"
            app:layout_constraintStart_toEndOf="@id/city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/city"
            app:layout_constraintBottom_toBottomOf="@id/city"/>

        <EditText
            android:id="@+id/zip"
            style= "@style/TextStyle.Large"
            android:text="@={viewModel.zip}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/zip"
            android:inputType="number"
            android:maxLength="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/city"
            app:layout_constraintTop_toBottomOf="@id/city" />

        <Button
            android:id="@+id/button_search"
            style="@style/PrimaryButton"
            android:text="@string/find_my_representatives"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/zip" />

        <Button
            android:id="@+id/button_location"
            style="@style/PrimaryButton"
            android:text="@string/use_my_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/button_search" />

        <TextView
            android:id="@+id/representative_title"
            android:text="@string/my_representatives"
            style="@style/TextStyle.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_location" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/representative_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="170dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/representative_title" />

        <TextView
            android:id="@+id/list_placeholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:textAlignment="center"
            android:visibility="gone"
            motion:visibilityMode="ignore"
            app:layout_constraintTop_toBottomOf="@id/representative_title"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/status_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/loading_spinner"
                app:apiStatus="@{viewModel.apiStatus}"
                motion:src="@drawable/loading_animation"
                motion:visibility="visible" />
        </LinearLayout>
  </RelativeLayout>
</layout>